--- a/src/main/resources/style/pane.css
+++ b/src/main/resources/style/pane.css
@@ -3,9 +3,29 @@
 }
 
 #banner {
-    -fx-background-color: linear-gradient(to bottom, #68e52f, #50b124);
+    -fx-background-color: #64DD17;
+    -fx-effect: dropshadow(gaussian, darkgrey, 10, 0, 0, 0);
 }
 
-#menu-button {
-    -fx-background-color: #50b124;
+#side-bar {
+    -fx-background-color: #68e21a;
+}
+
+#content-pane {
+    -fx-background-color: #ececec;
+    -fx-effect: dropshadow(gaussian, darkgrey, 12, 0, 0, 0);
+}
+
+#sideBarVBox {
+    -fx-background-color: #61d219;
+    -fx-effect: dropshadow(gaussian, grey, 6, 0, 0, 0);
+}
+
+#sideBarButtonContainer {
+    -fx-border-radius: 5 5 5 5;
+    -fx-background-radius: 5 5 5 5;
+}
+
+#sideBarButtonContainer:hover {
+    -fx-background-color: #5bc915;
 }
