--- a/src/main/resources/style/fontstyle.css
+++ b/src/main/resources/style/fontstyle.css
@@ -2,3 +2,8 @@
     font-family: 'Roboto Thin';
     src: url('../fonts/Roboto-Thin.ttf');
 }
+
+@font-face {
+    font-family: 'Roboto Regular';
+    src: url('../fonts/Roboto-Regular.ttf');
+}
