--- a/src/main/resources/calendar.fxml
+++ b/src/main/resources/calendar.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.layout.*?>
 
-<Pane id="contentPane" prefHeight="700.0" prefWidth="900.0" stylesheets="@style/pane.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.maxc.ui.CalendarController">
+<Pane id="contentPane" prefHeight="700.0" prefWidth="900.0" stylesheets="@style/pane.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.maxc.ui.view.calendar.CalendarController">
     <HBox fx:id="hBoxDayDisplay" prefHeight="700.0" prefWidth="900.0" spacing="10">
     </HBox>
 </Pane>
