--- a/src/main/resources/pane_scroller.fxml
+++ b/src/main/resources/pane_scroller.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.HBox?>
-<HBox id="contentPane" prefHeight="700.0" prefWidth="900.0" stylesheets="@style/pane.css"
-      xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="dev.maxc.ui.scroller.PaneScrollerController">
-    <HBox fx:id="basePane" alignment="CENTER" prefHeight="100.0" prefWidth="900.0"/>
-</HBox>
+
+<?import javafx.scene.layout.VBox?>
+<VBox id="contentPane" fx:id="basePane" alignment="CENTER" prefHeight="700.0" prefWidth="900.0"
+      stylesheets="@style/pane.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="dev.maxc.ui.model.scroller.PaneScrollerController"
+      spacing="20.0"/>
