--- a/src/main/resources/style/text.css
+++ b/src/main/resources/style/text.css
@@ -34,3 +34,17 @@
     -fx-text-fill: #424242;
     -fx-font-size: 24px;
 }
+
+.text-field {
+    -fx-font-family: "Roboto";
+    -fx-text-fill: #ffffff;
+    -fx-font-size: 18px;
+    -fx-prompt-text-fill: #fdfdfd;
+    -fx-background-color: white, #61d219, #61d219;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
+
+.text-field:focused {
+    -fx-background-color: white, #5bc915, #5bc915;
+    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+}
