--- a/src/main/resources/style/text.css
+++ b/src/main/resources/style/text.css
@@ -41,10 +41,11 @@
     -fx-font-size: 18px;
     -fx-prompt-text-fill: #fdfdfd;
     -fx-background-color: white, #61d219, #61d219;
-    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+    -fx-background-insets: 0 -2 -2 -2, 0 0 0 0, 0 -2 6 -2;
 }
 
 .text-field:focused {
     -fx-background-color: white, #5bc915, #5bc915;
-    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+    -fx-background-insets: 0 -2 -2 -2, 0 0 0 0, 0 -2 6 -2;
+    -fx-prompt-text-fill: #5bc915;
 }
