--- a/src/main/resources/style/text.css
+++ b/src/main/resources/style/text.css
@@ -35,6 +35,14 @@
     -fx-font-size: 24px;
 }
 
+#confirmationLabel {
+    -fx-font-family: "Roboto";
+    -fx-text-fill: #ffffff;
+    -fx-font-size: 18px;
+    -fx-background-color: white, #61d219, #61d219;
+    -fx-background-insets: 0 -2 -2 -2, 0 0 0 0, 0 -2 6 -2;
+}
+
 .text-field {
     -fx-font-family: "Roboto";
     -fx-text-fill: #ffffff;
@@ -48,4 +56,15 @@
     -fx-background-color: white, #5bc915, #5bc915;
     -fx-background-insets: 0 -2 -2 -2, 0 0 0 0, 0 -2 6 -2;
     -fx-prompt-text-fill: #5bc915;
+}
+
+.text-area {
+    -fx-font-family: "Roboto";
+    -fx-font-size: 18px;
+    -fx-background-color: white, #61d219, #61d219;
+    -fx-background-insets: 0 -2 -2 -2, 0 0 0 0, 0 -2 6 -2;
+}
+
+.text-area .scroll-bar:vertical:disabled {
+    -fx-opacity: 0;
 }
