--- a/src/main/resources/view/booking/booking_find_client.fxml
+++ b/src/main/resources/view/booking/booking_find_client.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane id="scrollPane" prefHeight="540.0" prefWidth="720.0" stylesheets="@../../style/pane.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.maxc.ui.view.booking.BookingLocateClient">
+<Pane id="scrollPane" prefHeight="540.0" prefWidth="720.0" stylesheets="@../../style/pane.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.maxc.ui.view.booking.BookingSelectClient">
     <Pane id="sideBarCategoryPane" layoutX="51.0" layoutY="51.0" prefHeight="425.0" prefWidth="618.0" stylesheets="@../../style/pane.css">
         <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="65.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
             <Image url="@../../icons/person_search_large.png" />
